# khp-hackathon-sample-submission

./: .env.example  .gitignore  .s3-env  README.md  hackathon.json  pyproject.toml
datasets/: README.md  distilbert_demo_data.csv  sample_guardrail_data.csv
docs/: README.md
project/: README.md
project/notebooks/: chat_pipeline_demo.ipynb  chat_pipeline_test.ipynb  guardrail_evaluation.ipynb  input_guardrail_test.ipynb  train_mmbert_guardrail.ipynb
project/providers/: __init__.py  base.py  cohere_provider.py  demo_provider.py  openai_provider.py
project/scripts/: configure.sh  eval.sh  evaluate.sh  get_guardrail_metrics.py  get_predictions.py  predict.sh  publish_artifact.sh  sample_multi-turn_data.csv  train_classifier_guardrail.py
project/src/: __init__.py
project/src/benchmark/: PARTICIPANT_README.md  example_submission.py  example_submission_ditillbert_guardrail.py  example_submission_llm_judge.py  hackathon_runner.py
project/src/end_to_end/: __init__.py  chat_pipeline.py
project/src/guardrails/: README.md  __init__.py  base.py  classifier.py  get_guardrail_metrics.py  get_predictions.py  llm_judge.py  metrics.py  submission_loader.py  train_classifier_guardrail.py
project/src/prompt_templates/: __init__.py  guardrail_prompt_template.py  triage_system_prompt.py
project/src/submission/: _runtime_config.py  example_submission.py  example_submission_cohere_llm_judge.py  example_submission_ditillbert_guardrail.py  example_submission_llm_judge.py  example_submission_mmbert_base_no_finetuning.py  example_submission_mmbert_guardrail.py  submission.py
